bug fix on mobile screens

--- a/style.css
+++ b/style.css
@@ -15,12 +15,11 @@
 #canvas {
     position: absolute;
     top: 0; left: 0;
+	height: 100vh;
     width: 100%;
-    height: 100%;
     background-color: #161929;
 	/* https://cssgradient.io/ */
 	background: linear-gradient(135deg, rgba(46,52,85,1) 0%, rgba(22,25,41,1) 69%, rgba(4,241,190,1) 69%, rgba(46,52,85,1) 100%);
-    position: absolute;
     z-index: -1;
 }
 
